# bacpacman

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  POLISHING.md  README.md  bacpacman.py  main.py  pyproject.toml  pyrightconfig.json
bacpacman/: azure_handler.py  cli.py  config.py  main.py  sql_handler.py  ui.py
